Fixed alpha for instructions to be more readable

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
     border: 1px solid #b3b3b3;
     padding: 20px;
     border-radius: 5px;
-    background-color: rgba(120,150,000, 0.3);
+    background-color: rgba(120,150,000, 0.8);
 }
 
 .windows-instructions {
@@ -128,7 +128,7 @@ body {
     border: 1px solid #b3b3b3;
     padding: 20px;
     border-radius: 5px;
-    background-color: rgba(120,150,200, 0.3);
+    background-color: rgba(120,150,200, 0.8);
     
 }
 
